[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rheelab_commons"
version = "0.0.4"
description = "This repo contains the common code and texts used across projects. This includes, LLM prompts, prompt structures, and keyword mappings."
authors = [
  { name = "Justin Vinh" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    # Core scientific stack
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "lifelines>=0.28",
    "tqdm>=4.66",
    "numexpr>=2.10.2",

    # Logging and utilities
    "loguru>=0.7",
    "orjson>=3.10",

    # Configuration / environment parsing
    "pyyaml>=6.0",
    "environs>=9.5",

    # Azure + OpenAI integration
    "openai>=1.43",
    "azure-identity>=1.17",
    "azure-core>=1.30",

    # Data validation / models
    "pydantic>=2.6",

    # Type hints, date parsing, etc.
    "python-dateutil>=2.9",

    # Optional: useful helpers
    "requests>=2.31",
]

requires-python = ">=3.10"


[tool.ruff]
line-length = 99
src = ["rheelab_commons"]
include = ["pyproject.toml", "rheelab_commons/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rheelab_commons"]
force-sort-within-sections = true

